--- a/backend/imagen_playground_backend.ipynb
+++ b/backend/imagen_playground_backend.ipynb
@@ -3,14 +3,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/saharmor/dalle-playground/blob/main/backend/dalle_playground_backend.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "118UKH5bWCGa"
@@ -20,7 +21,7 @@
         "</center>\n",
         "\n",
         "### <center>Use this notebook to run your text-to-image server</center>\n",
-        "### <center> [DALL-E Playground Repository](https://github.com/saharmor/dalle-playground) </center>"
+        "### <center> [Imagen Playground Repository](https://github.com/saharmor/dalle-playground) </center>"
       ]
     },
     {
@@ -120,17 +121,17 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
       "name": "python"
-    },
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
